--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -20,7 +20,20 @@
 	</filter>
 
 
-	
+
+	<filter>
+		<filter-name>gzip</filter-name>
+		<filter-class>
+			com.ken.finance.gzip.CompressionFilter
+		</filter-class>
+	</filter>
+
+
+	<filter-mapping>
+		<filter-name>gzip</filter-name>
+		<url-pattern>*.js</url-pattern>
+	</filter-mapping>
+
 	<filter-mapping>
 		<filter-name>doFilter</filter-name>
 		<url-pattern>*.jsp</url-pattern>
@@ -33,7 +46,7 @@
 		</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-	
+
 
 	<servlet>
 		<servlet-name>mvccontroller</servlet-name>
@@ -55,6 +68,43 @@
 		<servlet-name>ssocontroller</servlet-name>
 		<servlet-class>com.exedosoft.plat.SSOController</servlet-class>
 	</servlet>
+
+	<servlet>
+		<servlet-name>
+			net.sourceforge.barbecue.BarcodeServlet
+		</servlet-name>
+		<servlet-class>
+			net.sourceforge.barbecue.BarcodeServlet
+		</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+
+
+
+
+	<servlet>
+		<servlet-name>IceDaemonHttpServlet</servlet-name>
+		<servlet-class>com.zephyr.ice.IceDaemonHttpServlet
+		</servlet-class>
+		<init-param>
+			<param-name>endpoint</param-name>
+			<param-value>default -p 11000 -h 127.0.0.1</param-value>
+		</init-param>
+		<init-param>
+			<param-name>args</param-name>
+			<param-value>--Ice.MessageSizeMax=10240</param-value>
+		</init-param>
+		<init-param>
+			<param-name>servants</param-name>
+			<param-value>/WEB-INF/classes/servants-list.properties</param-value>
+		</init-param>
+		<load-on-startup>2</load-on-startup>
+	</servlet>
+
+
+
+
+
 
 
 	<servlet-mapping>
@@ -79,53 +129,16 @@
 	</servlet-mapping>
 
 	<servlet-mapping>
+		<servlet-name>
+			net.sourceforge.barbecue.BarcodeServlet
+		</servlet-name>
+		<url-pattern>/dobarcode/*</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
 		<servlet-name>ConnectorServlet</servlet-name>
 		<url-pattern>/FCKeditor/editor/filemanager/connectors/*</url-pattern>
 	</servlet-mapping>
-	
-	
-	
-	<!-- CMS系统配置  by 王宏亮 2011-01-11  -->
-	<servlet>
-  	<servlet-name>freemarker</servlet-name>
-  	<servlet-class>com.exedosoft.plat.cms.CMSFreemarkerServlet</servlet-class>
-  	<init-param>
-  		<param-name>TemplatePath</param-name>
-  		<param-value>/</param-value>
-  	</init-param>
-  	<init-param>
-  		<param-name>NoCache</param-name>
-  		<param-value>true</param-value>
-  	</init-param>
-  	<init-param>
-  		<param-name>ContentType</param-name>
-  		<param-value>text/html; charset=UTF-8</param-value>
-  	</init-param>
-  	<init-param>
-  		<param-name>template_update_delay</param-name>
-  		<param-value>0</param-value>
-  	</init-param>
-  	<init-param>
-  		<param-name>default_encoding</param-name>
-  		<param-value>UTF-8</param-value>
-  	</init-param>
-  	<init-param>
-  		<param-name>number_format</param-name>
-  		<param-value>0.##########</param-value>
-  	</init-param>
-  	<load-on-startup>1</load-on-startup>
-  </servlet>
-  
-  <servlet-mapping>
-  	<servlet-name>freemarker</servlet-name>
-  	<url-pattern>*.ftl</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>freemarker</servlet-name>
-  	<url-pattern>/cmsaction</url-pattern>
-  </servlet-mapping>
-
-  <!--  end of cms setting -->
 
 	<mime-mapping>
 		<extension>doc</extension>
@@ -143,12 +156,6 @@
 		<extension>xml</extension>
 		<mime-type>text/xml</mime-type>
 	</mime-mapping>
-	
-	<mime-mapping>
-	    <extension>ico</extension>
-	    <mime-type>image/x-icon</mime-type>
-	</mime-mapping> 
-	
 	<env-entry>
 		<env-entry-name>global.config</env-entry-name>
 		<env-entry-type>java.lang.String</env-entry-type>
