--- a/.classpath
+++ b/.classpath
@@ -48,5 +48,10 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-jexl-2.0.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/yhsdao.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/yhsmain.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ice-gbk-2.0.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/struts-1.2.9.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/zephyr-java-1.1.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/zephyr-lib-3.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jxl.jar"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
