--- a/eeplat/WebContent/WEB-INF/web.xml
+++ b/eeplat/WebContent/WEB-INF/web.xml
@@ -20,7 +20,7 @@
 	</filter>
 
 
-	
+
 	<filter-mapping>
 		<filter-name>doFilter</filter-name>
 		<url-pattern>*.jsp</url-pattern>
@@ -33,7 +33,7 @@
 		</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-	
+
 
 	<servlet>
 		<servlet-name>mvccontroller</servlet-name>
@@ -82,50 +82,51 @@
 		<servlet-name>ConnectorServlet</servlet-name>
 		<url-pattern>/FCKeditor/editor/filemanager/connectors/*</url-pattern>
 	</servlet-mapping>
-	
-	
-	
+
+
+
 	<!-- CMS系统配置  by 王宏亮 2011-01-11  -->
 	<servlet>
-  	<servlet-name>freemarker</servlet-name>
-  	<servlet-class>com.exedosoft.plat.cms.CMSFreemarkerServlet</servlet-class>
-  	<init-param>
-  		<param-name>TemplatePath</param-name>
-  		<param-value>/</param-value>
-  	</init-param>
-  	<init-param>
-  		<param-name>NoCache</param-name>
-  		<param-value>true</param-value>
-  	</init-param>
-  	<init-param>
-  		<param-name>ContentType</param-name>
-  		<param-value>text/html; charset=UTF-8</param-value>
-  	</init-param>
-  	<init-param>
-  		<param-name>template_update_delay</param-name>
-  		<param-value>0</param-value>
-  	</init-param>
-  	<init-param>
-  		<param-name>default_encoding</param-name>
-  		<param-value>UTF-8</param-value>
-  	</init-param>
-  	<init-param>
-  		<param-name>number_format</param-name>
-  		<param-value>0.##########</param-value>
-  	</init-param>
-  	<load-on-startup>1</load-on-startup>
-  </servlet>
-  
-  <servlet-mapping>
-  	<servlet-name>freemarker</servlet-name>
-  	<url-pattern>*.ftl</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>freemarker</servlet-name>
-  	<url-pattern>/cmsaction</url-pattern>
-  </servlet-mapping>
+		<servlet-name>freemarker</servlet-name>
+		<servlet-class>com.exedosoft.plat.cms.CMSFreemarkerServlet
+		</servlet-class>
+		<init-param>
+			<param-name>TemplatePath</param-name>
+			<param-value>/</param-value>
+		</init-param>
+		<init-param>
+			<param-name>NoCache</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
+			<param-name>ContentType</param-name>
+			<param-value>text/html; charset=UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>template_update_delay</param-name>
+			<param-value>0</param-value>
+		</init-param>
+		<init-param>
+			<param-name>default_encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>number_format</param-name>
+			<param-value>0.##########</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
 
-  <!--  end of cms setting -->
+	<servlet-mapping>
+		<servlet-name>freemarker</servlet-name>
+		<url-pattern>*.ftl</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>freemarker</servlet-name>
+		<url-pattern>/cmsaction</url-pattern>
+	</servlet-mapping>
+
+	<!--  end of cms setting -->
 
 	<mime-mapping>
 		<extension>doc</extension>
@@ -143,12 +144,28 @@
 		<extension>xml</extension>
 		<mime-type>text/xml</mime-type>
 	</mime-mapping>
-	
+
 	<mime-mapping>
-	    <extension>ico</extension>
-	    <mime-type>image/x-icon</mime-type>
-	</mime-mapping> 
+		<extension>ico</extension>
+		<mime-type>image/x-icon</mime-type>
+	</mime-mapping>
 	
+	<session-config>
+        <session-timeout>2</session-timeout>
+    </session-config>
+
+<!-- 
+
+
+	<error-page>
+		<error-code>404</error-code>
+		<location>/common/404.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/common/error.jsp</location>
+	</error-page>
+	 -->
 	<env-entry>
 		<env-entry-name>global.config</env-entry-name>
 		<env-entry-type>java.lang.String</env-entry-type>
