--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.5.0_05"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v5.5"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="con" path="com.soyatec.uml.CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ant.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/asm-3.1.jar"/>
@@ -25,7 +24,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/java_memcached-release_2.0.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jdom.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/js.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jtds-1.2.jar"/>
+	<classpathentry kind="lib" path="E:/eclipse35/workspace/eeplat/WebContent/WEB-INF/lib/jtds-1.2.5.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/log4j-1.2.9.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-3.1.12-bin.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ojdbc14.jar"/>
@@ -33,25 +32,21 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/quartz-1.6.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/uploadFile.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xfire-all-1.2.6.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jdbcLdap.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ldap.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/activation.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mail.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-api-1.6.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-io-1.4.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-simple-1.6.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jxls-core-1.0-RC-1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jxls-reader-1.0-RC-1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-3.6-20091214.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-ooxml-3.6-20091214.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-ooxml-schemas-3.6-20091214.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-jexl-2.0.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/yhsdao.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/yhsmain.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ice-gbk-2.0.0.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/struts-1.2.9.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/zephyr-java-1.1.0.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/zephyr-lib-3.4.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jxl.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/yhsdao.jar" sourcepath="/yiyi_dao"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/yhsmain.jar" sourcepath="/yiyi_core"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-api-1.6.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-simple-1.6.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jsqlparser.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/h2-1.3.149.jar"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
