--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -28,7 +28,7 @@ log4j.appender.A1.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%t] - [%p] 
 
 
 log4j.appender.D =org.apache.log4j.RollingFileAppender
-log4j.appender.D.File = c:\log.log
+log4j.appender.D.File = c:/log.log
 log4j.appender.D.MaxFileSize=1024KB
 log4j.appender.D.MaxBackupIndex=5
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
