--- a/src/social.properties
+++ b/src/social.properties
@@ -35,13 +35,13 @@ renrenAppID=175337
 # * EEPlat Social Callback config
 # ================================================
 
-#weibo.cb=http://testme.com/eemulti/openid/weibo/callback.jsp
-#t163.cb=http://testme.com/eemulti/openid/163/callback.jsp
-#qq.cb=http://testme.com/eemulti/openid/qq/callback.jsp
+weibo.cb=http://testme.com/eemulti/openid/weibo/callback.jsp
+t163.cb=http://testme.com/eemulti/openid/163/callback.jsp
+qq.cb=http://testme.com/eemulti/openid/qq/callback.jsp
 # must be in keeping with your defined in renren.
-#renren.cb=http://testme.com/eemulti/openid/renren/callback.jsp
+renren.cb=http://testme.com/eemulti/openid/renren/callback.jsp
 
-weibo.cb=http://www.eeplat.com/eemulti/openid/weibo/callback.jsp
-t163.cb=http://www.eeplat.com/eemulti/openid/163/callback.jsp
-renren.cb=http://www.eeplat.com/eemulti/openid/renren/callback.jsp
-qq.cb = http://www.eeplat.com/eemulti/openid/qq/callback.jsp
+#weibo.cb=http://www.eeplat.com/eemulti/openid/weibo/callback.jsp
+#t163.cb=http://www.eeplat.com/eemulti/openid/163/callback.jsp
+#renren.cb=http://www.eeplat.com/eemulti/openid/renren/callback.jsp
+#qq.cb = http://www.eeplat.com/eemulti/openid/qq/callback.jsp
