--- a/eeplat/src/log4j.properties
+++ b/eeplat/src/log4j.properties
@@ -6,24 +6,11 @@
 # For the general syntax of property based configuration files see the
 # documenation of org.apache.log4j.PropertyConfigurator.
 
-log4j.rootLogger=info, A1,D
+log4j.rootLogger=info,stdout,D
 
-# A1 is set to be a ConsoleAppender which outputs to System.out.
-log4j.appender.A1=org.apache.log4j.ConsoleAppender
-
-# A1 uses PatternLayout.
-log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-
-# The conversion pattern uses format specifiers. You might want to
-# change the pattern an watch the output format change.
-#log4j.appender.A1.layout.ConversionPattern=%-4r %-5p [%t] %37c %3x - %m%n
-log4j.appender.A1.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%t] - [%p] %37c(:%L) %3x %m%n
-
-# In this example, we are not really interested in INNER loop or SWAP
-# messages. See the effects of uncommenting and changing the levels of
-# the following loggers.
-# log4j.logger.org.apache.log4j.examples.SortAlgo.INNER=WARN
-# log4j.logger.org.apache.log4j.examples.SortAlgo.SWAP=WARN
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout 
+log4j.appender.stdout.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%t] - [%p] %37c(:%L) %3x %m%n
 
 
 
