--- a/eeplat/src/log4j.properties
+++ b/eeplat/src/log4j.properties
@@ -13,7 +13,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%t] - [%p] %37c(:%L) %3x %m%n
 
 log4j.appender.D =org.apache.log4j.RollingFileAppender
-log4j.appender.D.File = c:\log.log
+log4j.appender.D.File = d:\log.log
 log4j.appender.D.MaxFileSize=1024KB
 log4j.appender.D.MaxBackupIndex=5
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
