--- a/eeplat/src/log4j.properties
+++ b/eeplat/src/log4j.properties
@@ -13,8 +13,23 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%t] - [%p] %37c(:%L) %3x %m%n
 
 log4j.appender.D =org.apache.log4j.RollingFileAppender
-log4j.appender.D.File = d:\log.log
+log4j.appender.D.File = log.log
 log4j.appender.D.MaxFileSize=1024KB
 log4j.appender.D.MaxBackupIndex=5
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
 log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [%t] - [%p] %37c(:%L) %3x %m%n
+
+
+log4j.appender.threadLog=com.exedosoft.plat.log.ThreadAppender
+log4j.appender.threadLog.layout=org.apache.log4j.PatternLayout
+log4j.appender.threadLog.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%t] - [%p] %37c(:%L) %3x %m%n
+		
+log4j.logger.com.exedosoft.plat.dao.DAOSearch=error, threadLog
+log4j.logger.com.exedosoft.plat.dao.DAOTools=error, threadLog
+
+log4j.logger.com.exedosoft.plat.bo.DOService=info,threadLog
+log4j.logger.com.exedosoft.plat.bo.search.SearchImp=info,threadLog
+log4j.logger.com.exedosoft.plat.bo.BOInstance=info,threadLog
+log4j.logger.com.exedosoft.plat.MVCController=info,threadLog
+log4j.logger.com.exedosoft.plat.ServiceController=info,threadLog
+log4j.logger.com.exedosoft.plat.js.*=info,threadLog
